fix background img in file html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="player">
             <div class="player_container">
                 <!-- Dashboard -->
-                    <div class="dashboard" style="background-image: url('/assets/images/song1.jpg')">
+                    <div class="dashboard" style="background-image: url('./assets/images/song1.jpg')">
                         <div class="dashboard-cover" >
                             <!-- Header -->
                         <header>
